--- a/src/Components/Home/index.css
+++ b/src/Components/Home/index.css
@@ -137,7 +137,7 @@
 .skill-icons {
   font-size: 18px;
   margin-right: 5px;
-  color: #2596be;
+  color: #2e8b57;
 }
 @media screen and (min-width: 768px) {
   .skill-icons {
