--- a/src/Components/Navbar/index.css
+++ b/src/Components/Navbar/index.css
@@ -14,6 +14,11 @@
     align-items: center;
   }
 }
+/* .navbar-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+} */
 .nav-flex {
   display: flex;
   justify-content: space-between;
@@ -26,17 +31,20 @@
   font-style: italic;
   color: white;
   padding-left: 5px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 @media screen and (min-width: 768px) {
   .nav-logo {
     font-size: 32px;
+    /* margin-bottom: 10px; */
   }
 }
 .ham-icon {
   cursor: pointer;
   background-color: transparent;
-  font-size: 22px;
+  font-size: 42px;
   padding-right: 10px;
   color: white;
 }
