--- a/src/Components/Navbar/index.css
+++ b/src/Components/Navbar/index.css
@@ -1,101 +1,81 @@
 .nav-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   width: 100%;
   min-height: 80px;
-  background-image: linear-gradient(
-    109.6deg,
-    rgba(61, 131, 97, 1) 11.2%,
-    rgba(28, 103, 88, 1) 91.1%
-  );
+  padding: 10px;
+  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 }
 @media screen and (min-width: 768px) {
   .nav-container {
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
   }
 }
-/* .navbar-flex {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-} */
+
 .nav-flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.home-link {
-  text-decoration: none;
-}
 .nav-logo {
   font-style: italic;
+  font-weight: bolder;
   color: white;
-  padding-left: 5px;
-  padding-bottom: 0px;
-  margin-bottom: 0px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 @media screen and (min-width: 768px) {
   .nav-logo {
     font-size: 32px;
-    /* margin-bottom: 10px; */
   }
 }
+
 .ham-icon {
-  cursor: pointer;
-  background-color: transparent;
-  font-size: 42px;
-  padding-right: 10px;
   color: white;
+  cursor: pointer;
 }
 @media screen and (min-width: 768px) {
   .ham-icon {
     display: none;
   }
 }
+
 .sm-nav-list {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0px;
   list-style-type: none;
-  margin-right: 20px;
-  padding-bottom: 10px;
+  padding: 0px;
 }
+
 @media screen and (min-width: 768px) {
   .sm-nav-list {
     display: none;
   }
 }
 
+.link {
+  text-decoration: none;
+  color: white;
+  font-style: italic;
+}
+.nav-item {
+  margin-left: 10px;
+  margin-right: 10px;
+  color: white;
+  font-weight: bold;
+  font-style: italic;
+}
 .lg-nav-list {
   display: none;
 }
 @media screen and (min-width: 768px) {
   .lg-nav-list {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    padding: 0px;
     list-style-type: none;
-    margin-right: 20px;
+    padding: 0px;
   }
-}
-
-.nav-item {
-  color: white;
-  margin-left: 10px;
-  margin-right: 10px;
-  font-family: Roboto;
-  font-style: italic;
-  font-weight: bolder;
-  cursor: pointer;
-}
-.link {
-  text-decoration: none;
-  color: black;
-}
-.active {
-  color: springgreen;
-  border-bottom: 1px solid;
 }
