--- a/src/Components/Certificates/index.css
+++ b/src/Components/Certificates/index.css
@@ -1,5 +1,5 @@
 .certificates-container {
-  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  background-image: linear-gradient(to top, #0fd850 0%, #f9f047 100%);
   width: 100%;
   min-height: 100vh;
   padding-bottom: 100px;
@@ -13,23 +13,56 @@
     flex-wrap: wrap;
   }
 }
+.certificates-title {
+  animation: zoomInOut 2s infinite;
+  text-align: center;
+  font-style: italic;
+  font-family: Lobster;
+}
+@keyframes zoomInOut {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
 .certificate-box {
-  /* border: 1px solid; */
+  border: 1px solid;
   padding: 10px;
   margin: 5px;
   border-radius: 5px;
   margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 @media screen and (min-width: 768px) {
   .certificate-box {
-    width: 300px;
+    width: 350px;
+    margin: 10px;
     height: 380px;
   }
 }
+@media screen and (min-width: 996px) {
+  .certificate-box {
+    width: 450px;
+    margin: 20px;
+    /* height: 700px; */
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .certificate-box {
     width: 600px;
-    height: 700px;
+    margin: 20px;
+    height: 600px;
   }
 }
 
@@ -48,6 +81,6 @@
 }
 @media screen and (min-width: 1200px) {
   .certificate-img {
-    width: 600px;
+    width: 550px;
   }
 }
