--- a/src/Components/ContactUs/index.css
+++ b/src/Components/ContactUs/index.css
@@ -1,18 +1,49 @@
 .contact-title {
   text-align: center;
   font-style: italic;
+  animation: zoomInOut 5s infinite;
 }
+@keyframes zoomInOut {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
 .contact-icons-container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .contact-icons {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
   color: black;
   font-size: 22px;
+  animation: zoomInOut 5s infinite;
 }
+
+@keyframes zoomInOut {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
 .contact-icons:hover {
   color: white;
 }
@@ -20,5 +51,7 @@
 @media screen and (min-width: 768px) {
   .contact-icons {
     font-size: 32px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
 }
